[v1.1c] fixed minor styling issue on mobile browser

--- a/src/components/Projects/ProjectsSection.css
+++ b/src/components/Projects/ProjectsSection.css
@@ -30,7 +30,7 @@
     background-color: RGB(30, 30, 30);
     margin:auto;
     border-style: solid;
-    border-width: 50px 50px 0px 50px;
+    border-width: 50px 25px 0px 25px;
     border-color: RGB(235, 96, 17);
     margin-bottom: 50px;
 }
